--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </div>
 
     <div class="container my-5" id="characterSection">
-        <h3 class="characterSectionTitle">The 10 Defining Characters</h3>
+        <h3 class="characterSectionTitle">Meet the Characters: The Heart of the Story</h3>
         <div class="row g-4 justify-content-center" id="characterOutput">
         </div>
     </div>
